syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/Qitmeer/qng/p2p/proto/v1/gogo.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/message.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/graphstate.proto";

message SyncBlocksReq {
  bool init = 1;
  GraphState graphState = 2;
  repeated Hash mainLocator = 3 [(gogoproto.moretags) = "ssz-max:\"32\""];
}

message SyncBlocksRsp {
  bool complete = 1;
  Hash syncPoint = 2;
  repeated BytesData blocks = 3 [(gogoproto.moretags) = "ssz-max:\"1048576\""];
}